--- a/index.html
+++ b/index.html
@@ -78,12 +78,44 @@
 			<button class="form__hidden modalWindow">Закажите обратный звонок</button>
 		</div>
 	</header>
-	<main class="main">
+	<main class="main container">
 		<section class="main__about">
 			<div class="about__text">
 				<h1 class="about__title">Почему с нами выгодно</h1>
 				<p class="about__text">С 1996 года мы занимаемся оптовыми поставками электронных компонентов от ведущих производителей из Европы 
 				и Азии для Российских потребителей. </p>
+			</div>
+			<div class="main__cards">
+				<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+					<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+					<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+					<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+					<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+					<div class="main__card">
+					<img src="/images/card1.png" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
 			</div>
 		</section>
 	</main>
