--- a/index.html
+++ b/index.html
@@ -43,16 +43,22 @@
 				<span class="burger-line"></span>
 			</div>
 			<div class="header__phone">
+				<img src="/images/ico/phoneIco.svg" alt="">
 				<a href=»tel:+7(813)3135845″>+7 (812) 313-58-45</a>
 			</div>
 		</div>
 
 		<div class="header__content">
 			<div class="header__content-text">
-				<h1 class="content__title">Оптовые поставки <h2 class="content__title-span">электронных компонентов</h2> <h2 class="content__title-h2">из китая день в день</h2>
-				</h1>
-				<p class="content__text">Комплексные поставки электронных компонентов и оборудования.</p>
-				<p class="content__text">Подберем аналоги популярных брендов из Европы в условиях санкций.</p>
+				<div class="header__title">
+						<h1 class="content__title">Оптовые поставки <h2 class="content__title-sec">электронных компонентов</h2> <h2 class="content__title-thr">из китая день в день</h2>
+					</h1>
+				</div>
+				<div class="header__subtitle">
+					<p class="content__text">Комплексные поставки электронных компонентов и оборудования.
+					Подберем аналоги популярных брендов из Европы в условиях санкций.
+					</p>
+				</div>
 				<nav class="header__nav">
 					<ul class="header__list">
 						<li class="header__list-item"><img src="/images/ico/check.svg" alt="">Отсрочка платежей для постоянных клиентов</li>
@@ -87,32 +93,32 @@
 			</div>
 			<div class="main__cards">
 				<div class="main__card">
-					<img src="/images/card1.png" alt="">
+					<img src="/images/card1.svg" alt="">
+					<p class="card__title">Качественная продукция</p>
+					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
+				</div>
+				<div class="main__card">
+					<img src="/images/card2.svg" alt="">
 					<p class="card__title">Качественная продукция</p>
 					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
 				</div>
 					<div class="main__card">
-					<img src="/images/card1.png" alt="">
+					<img src="/images/card3.svg" alt="">
 					<p class="card__title">Качественная продукция</p>
 					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
 				</div>
 					<div class="main__card">
-					<img src="/images/card1.png" alt="">
+					<img src="/images/card4.svg" alt="">
 					<p class="card__title">Качественная продукция</p>
 					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
 				</div>
 					<div class="main__card">
-					<img src="/images/card1.png" alt="">
+					<img src="/images/card5.svg" alt="">
 					<p class="card__title">Качественная продукция</p>
 					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
 				</div>
 					<div class="main__card">
-					<img src="/images/card1.png" alt="">
-					<p class="card__title">Качественная продукция</p>
-					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
-				</div>
-					<div class="main__card">
-					<img src="/images/card1.png" alt="">
+					<img src="/images/card6.svg" alt="">
 					<p class="card__title">Качественная продукция</p>
 					<p class="card__text">Все наши товары сертифицированы и имеют сопроводительную документацию.</p>
 				</div>
