--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 					</li>
 				</ul>
 			</nav>
+			<div class="pop__up"></div>
 			<div class="nav__burger">
 				<span class="burger-line"></span>
 			</div>
