бургер меню в процессе

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 					<img src="/images/ico/logo.svg" alt="">
 				</a>
 			</div>
+			<div class="menu__btn">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 			<nav class="header__menu-nav">
 				<ul class="menu__list">
 					<li class="menu__item">
@@ -39,10 +45,6 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="pop__up"></div>
-			<div class="nav__burger">
-				<span class="burger-line"></span>
-			</div>
 			<div class="header__phone">
 				<img src="/images/ico/phoneIco.svg" alt="">
 				<a href=»tel:+7(813)3135845″>+7 (812) 313-58-45</a>
