--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/swiper-bundle.min.css">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favico/favicon-32x32.png">
+	<link rel="stylesheet" href="css/swipper.css">
 	<link rel="stylesheet" href="css/main.css">
 	<title>Semitex</title>
 </head>
@@ -94,7 +95,7 @@
 	</header>
 	<main class="main">
 		<section class="main__about">
-			<div class="about__text">
+			<div class="about__text-content">
 				<h1 class="about__title">Почему с нами выгодно</h1>
 				<p class="about__text">С 1996 года мы занимаемся оптовыми поставками электронных компонентов от ведущих производителей из Европы 
 				и Азии для Российских потребителей. </p>
@@ -135,12 +136,12 @@
 				</div>
 			</div>
 		</section>
-		<section class="manufacturer container">
+		<section class="manufacturer">
 			<div class="manufacturer__title">
 				<h1>Наши производители</h1>
 			</div>
 			<div class="swiper">
-  <!-- Additional required wrapper -->
+  			<!-- Additional required wrapper -->
   			<div class="swiper-wrapper">
     			<!-- Slides -->
     			<div class="swiper-slide">
@@ -152,25 +153,98 @@
     			<div class="swiper-slide">
 						<img src="/images/slider/slide3.png" alt="">
 					</div>
-    			<div class="swiper-slide">
+					<div class="swiper-slide">
 						<img src="/images/slider/slide4.png" alt="">
 					</div>
 					<div class="swiper-slide">
 						<img src="/images/slider/slide5.png" alt="">
 					</div>
+
   			</div>
 
-  			<!-- If we need navigation buttons -->
+			  <!-- If we need navigation buttons -->
   			<div class="swiper-button-prev"></div>
   			<div class="swiper-button-next"></div>
-				
 			</div>
+		</div>
+
 			<div class="manufacturer__text">
 				<p>Lorem ipsum dolor sit amet consectetur. Non eget blandit in euismod felis id quisque nunc. Non orci lacus elit mauris velit gravida imperdiet id. Ipsum pulvinar ac ut sociis. Sed magna gravida consequat et euismod aenean quis mauris. Ut etiam egestas ultrices faucibus ultrices nisl enim consequat faucibus. Nibh id leo ullamcorper eleifend. Id at commodo interdum et leo. </p>
 			</div>
 		</section>
+		<section class="job__cards">
+			<div class="about__text-content">
+				<h1 class="about__title job-title">Наши производители</h1>
+				<p class="about__text">С 1996 года мы занимаемся оптовыми поставками электронных компонентов от ведущих производителей из Европы 
+				и Азии для Российских потребителей. </p>
+			</div>
+			<div class="main__cards">
+				<div class="job__card">
+					<span class="title-number">01</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">ВЫ ОСТАВЛЯЕТЕ ЗАЯВКУ</hi>
+						<p class="cards-text">Отправить запрос вы можете любым удобным для вас способом: например, через форму на сайте. Также вы можете связаться с нами напрямую.</p>
+					</div>
+				</div>
+				<div class="job__card">
+					<span class="title-number">02</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">МЫ ПРОВЕРЯЕМ НАЛИЧИЕ ПОЗИЦИЙ</hi>
+						<p class="cards-text">
+							Проверяем наличие на складе, 
+							а также актуальность производства (возможна замена, если необходимо.) Если требуется замена - подбираем аналоги и привозим на заказ.
+						</p>
+					</div>
+				</div>
+				<div class="job__card">
+					<span class="title-number">03</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">
+							ФОРМИРУЕМ КОММЕРЧЕСКОЕ 	ПРЕДЛОЖЕНИЕ
+						</hi>
+						<p class="cards-text">
+							На данном этапе мы с вами согласуем ценовое предложение, обговариваем сроки поставки и условия оплаты.
+						</p>
+					</div>
+				</div>
+				<div class="job__card">
+					<span class="title-number">06</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">ВЫ ПОЛУЧАЕТЕ ТОВАР</hi>
+						<p class="cards-text">Поставляем вам товар в надлежащей упаковке в сопровождении оригиналов всех необходимых документов либо вы забираете его самовывозом.</p>
+					</div>
+				</div>
+				<div class="job__card">
+					<span class="title-number">05</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">МЫ ВЫПОЛНЯЕМ ЗАКАЗ</hi>
+						<p class="cards-text">
+							Товар поступает на склад в Москву или Санкт-Петербург, где мы сверяем правильность поставки и начинаем сборку.
+						</p>
+					</div>
+				</div>
+				<div class="job__card">
+					<span class="title-number">04</span>
+					<div class="job__cards-text">
+						<hi class="cards-title">ПРОВОДИМ ОПЛАТУ
+						</hi>
+						<p class="cards-text cardBtn">Далее, после получения авансового платежа, мы размещаем заказ.</p>
+					</div>
+				</div>
+			</div>
+			<button class="yellow-btn">Оставить заявку</button>
+		</section>
 	</main>
-	<script src="/script/swiper-bundle.min.js"></script>
+	<section class="qua">
+		<h1 class="about__title">Ответы на самые популярные вопросы в сфере</h1>
+		<div class="qua__drop-down">
+			<ul class="qua-list">
+				<span class="qua-item">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</span>
+				<img src="" alt="">
+			</ul>
+		</div>
+	</section>
+	<script src="/script/swipperBundle.js"></script>
 	<script src="/script/swip.js"></script>
 	<script src="/script/main.js"></script>
 	<script src="/script/navbar.js"></script>
