--- a/index.html
+++ b/index.html
@@ -235,18 +235,45 @@
 			<button class="yellow-btn">Оставить заявку</button>
 		</section>
 	</main>
-	<section class="qua">
-		<h1 class="about__title">Ответы на самые популярные вопросы в сфере</h1>
+	<section class="qua container">
+		<h1 class="qua-title about__title">Ответы на самые популярные вопросы в сфере</h1>
 		<div class="qua__drop-down">
-			<ul class="qua-list">
-				<span class="qua-item">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</span>
-				<img src="" alt="">
-			</ul>
+			<div class="qua__items-column">
+				<div class="qua__items-content">
+					<p class="qua__text-content">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+					<button class="qua__btn">
+						<img src="/images/ico/checkOff.svg" alt="">
+					</button>
+				</div>
+				<p class="qua-text">
+					Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+					Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+					At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+				</p>
+			</div>
+			<div class="qua__items-column">
+				<div class="qua__items-content">
+					<p class="qua__text-content">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+					<button class="qua__btn">
+						<img src="/images/ico/checkOff.svg" alt="">
+					</button>
+				</div>
+				<p class="qua-text">
+					Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+					Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+					At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+				</p>
+			</div>
 		</div>
 	</section>
 	<script src="/script/swipperBundle.js"></script>
 	<script src="/script/swip.js"></script>
 	<script src="/script/main.js"></script>
 	<script src="/script/navbar.js"></script>
+	<script src="/script/qua.js"></script>
 </body>
 </html>
