--- a/index.html
+++ b/index.html
@@ -234,46 +234,128 @@
 			</div>
 			<button class="yellow-btn">Оставить заявку</button>
 		</section>
+
+		
+		<section class="qua container">
+			<h1 class="qua-title about__title">Ответы на самые популярные вопросы в сфере</h1>
+			<div class="qua__drop-down">
+				<div class="qua__items">
+					<div class="qua__items-content">
+						<p class="qua__items-text">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+						<button class="qua__btn">
+							<img  class="qua__img" src="/images/ico/checkActive.svg" alt="">
+						</button>
+					</div>
+					<p class="qua__items-subtitle">
+						Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+						Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+						At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+					</p>
+				</div>
+				<div class="qua__items">
+					<div class="qua__items-content">
+						<p class="qua__items-text">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+						<button class="qua__btn">
+							<img class="qua__img" src="/images/ico/checkActive.svg" alt="">
+						</button>
+					</div>
+					<p class="qua__items-subtitle">
+						Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+						Most commonly “stem cell therapy” 	is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+						At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+					</p>
+				</div>
+				<div class="qua__items">
+					<div class="qua__items-content">
+						<p class="qua__items-text">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+						<button class="qua__btn">
+							<img src="/images/ico/checkActive.svg" alt="">
+						</button>
+					</div>
+					<p class="qua__items-subtitle">
+						Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+						Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+						At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+					</p>
+				</div>
+				<div class="qua__items">
+					<div class="qua__items-content">
+						<p class="qua__items-text">Lorem 	ipsum dolor sit amet consectetur. Ultrices aliquam.
+						</p>
+						<button class="qua__btn">
+							<img src="/images/ico/checkActive.svg" alt="">
+						</button>
+					</div>
+					<p class="qua__items-subtitle">
+						Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+						Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+						At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+					</p>
+				</div>
+				<div class="qua__items">
+					<div class="qua__items-content">
+						<p class="qua__items-text">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
+						<button class="qua__btn">
+							<img src="/images/ico/checkActive.svg" alt="">
+						</button>
+					</div>
+					<p class="qua__items-subtitle">
+						Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
+
+						Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
+
+						At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
+					</p>
+				</div>
+			</div>
+		</section>
+
 	</main>
-	<section class="qua container">
-		<h1 class="qua-title about__title">Ответы на самые популярные вопросы в сфере</h1>
-		<div class="qua__drop-down">
-			<div class="qua__items-column">
-				<div class="qua__items-content">
-					<p class="qua__text-content">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
-					<button class="qua__btn">
-						<img src="/images/ico/checkOff.svg" alt="">
-					</button>
-				</div>
-				<p class="qua-text">
-					Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
 
-					Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
-
-					At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
-				</p>
+	<footer class="footer container">
+		<div class="footer__nav">
+			<img src="/images/ico/logo.svg" alt="" class="logo">
+			<div class="footer__items">
+				<ul class="footer__list">
+					<li class="footer_li">
+						<a href="#">Каталог</a>
+					</li>
+					<li class="footer_li">
+						<a href="#">Производители</a>
+					</li>
+					<li class="footer_li">
+						<a href="#">Для  кого мы работаем</a>
+					</li>
+					<li class="footer_li">
+						<a href="#">Сертификаты</a>
+					</li>
+					<li class="footer_li">
+						<a href="#">О нас</a>
+					</li>
+					<li class="footer_li">
+						<a href="#">Контакты</a>
+					</li>
+				</ul>
 			</div>
-			<div class="qua__items-column">
-				<div class="qua__items-content">
-					<p class="qua__text-content">Lorem ipsum dolor sit amet consectetur. Ultrices aliquam.</p>
-					<button class="qua__btn">
-						<img src="/images/ico/checkOff.svg" alt="">
-					</button>
-				</div>
-				<p class="qua-text">
-					Like the phrase “stem cell” itself, “stem cell therapy” is often used to describe a variety of different medical therapies that utilize stem cells in some form to treat a patient. Sometimes the term is used incorrectly to refer to platelet rich plasma (PRP) injections. The term is also used to refer to stem cell transplants, also known as bone marrow transplants.
-
-					Most commonly “stem cell therapy” is used to describe a procedure where the patient’s adult stem cells and other potentially regenerative cells are harvested from a tissue sample of either fat or bone marrow taken from the patient. These concentrated regenerative cells are then used to treat specific injuries typically by injecting them into the afflicted area. It should be said that this type of stem cell therapy is currently not FDA approved and clinics performing it illegally in the US or in other countries perform various versions of the procedure to treat illnesses and injuries with little to no clinical evidence.
-
-					At InGeneron we use the term “regenerative cell therapy” since there are many different cell types and regenerative properties collected and used by our therapy along with adult stem cells. Importantly we do not treat patients outside of our approved clinical trials and we are dedicated to securing FDA approval through rigorous clinical testing.
-				</p>
-			</div>
+			<button class="yellow-btn footer-btn">ОСТАВИТЬ ЗАЯВКУ</button>
 		</div>
-	</section>
+	</footer>
+
+
 	<script src="/script/swipperBundle.js"></script>
 	<script src="/script/swip.js"></script>
 	<script src="/script/main.js"></script>
 	<script src="/script/navbar.js"></script>
 	<script src="/script/qua.js"></script>
+
+
 </body>
 </html>
